Fixed alignment issues of nav and mission

--- a/css/reset.css
+++ b/css/reset.css
@@ -52,3 +52,10 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+
+/* Global box-sizing rule */
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
