--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,6 @@ html {
   line-height: 1.3;
   font-size: 16px;
   color: #333333;
-  box-sizing: border-box;
   scroll-behavior: smooth;
 }
 
@@ -163,19 +162,23 @@ header {
   position: fixed;
   z-index: 999;
   width: 100%;
+  /* Left and right 60px */
+  padding: 0 3.75rem;
   background-color: #FAFAF9;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
   height: 5.625rem;
   display: flex;
+  justify-content: center;
   align-items: center;
 }
 
 header > nav {
-  width: 90rem;
+  width: 100%;
+  max-width: 107.5rem; /* Starts at 1720px and shrinks with viewport size */
   height: 100%;
   margin: 0 auto;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
 }
 
@@ -240,6 +243,11 @@ header > nav {
 }
 
 @media only screen and (max-width: 768px) {
+  header {
+    /* Left and right 30px */
+    padding: 0 1.875rem;
+  }
+
   .nav-right li:not(:last-of-type) {
     display: none;
   }
@@ -267,7 +275,6 @@ header > nav {
   position: relative;
   top: calc(50% + 5.625rem);
   transform: translateY(-61%);
-  box-sizing: border-box;
   background-color: rgba(51, 51, 51, 0.9);
   /* 60px */
   padding: 3.75rem;
@@ -342,16 +349,18 @@ header > nav {
   flex-direction: column;
   align-items: center;
   margin: 0 auto;
+  /* Left and right 60px */
+  padding: 0 3.75rem;
   background-color: #333333;
   text-align: center;
   color: #FFF;
 }
 
 #mission > article {
-  /* 1440px */
-  max-width: 1440px;
-  /* 60px */
-  margin: 3.75rem auto;
+  width: 100%;
+  max-width: 107.5rem; /* Starts at 1720px and shrinks with viewport size */
+  margin-top: 3.75rem; /* 60px */
+  margin-bottom: 3.75rem; /* 60px */
 }
 
 #mission h2 {
@@ -370,13 +379,11 @@ header > nav {
   /* 60px */
   margin-bottom: 3.75rem;
   display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
+  justify-content: space-between;
 }
 
 #mission .p-container > p {
-  /* 460px */
-  max-width: 28.75rem;
+  max-width: 32.17%;
 }
 
 @media only screen and (max-width: 1379px) {
@@ -390,6 +397,22 @@ header > nav {
     width: 6.25rem;
     /* 30px */
     margin-bottom: 1.875rem;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  #mission {
+  /* Left and right 30px */
+  padding: 0 1.875rem;
+  }
+
+  #mission .p-container {
+    flex-wrap: wrap;
+  }
+
+  #mission .p-container > p {
+    /* 533.333 px */
+    max-width: 100%;
   }
 
   #mission .p-container > p:not(:last-of-type) {
